@@ -66,3 +66,28 @@ class UserFriendlyTypesVocabulary(object):
         return SimpleVocabulary.fromItems(items)
 
 UserFriendlyTypesVocabularyFactory = UserFriendlyTypesVocabulary()
+
+
+BAD_TYPES = ("ATBooleanCriterion", "ATDateCriteria", "ATDateRangeCriterion",
+             "ATListCriterion", "ATPortalTypeCriterion", "ATReferenceCriterion",
+             "ATSelectionCriterion", "ATSimpleIntCriterion", "Plone Site",
+             "ATSimpleStringCriterion", "ATSortCriterion", "ChangeSet",
+             "Discussion Item", "TempFolder", "ATCurrentAuthorCriterion",
+             "ATPathCriterion", "ATRelativePathCriterion", )
+
+
+class ReallyUserFriendlyTypesVocabulary(object):
+    """Vocabulary factory for really user friendly portal types.
+    """
+    implements(IVocabularyFactory)
+
+    def __call__(self, context):
+        context = getattr(context, 'context', context)
+        ttool = getToolByName(context, 'portal_types')
+        items = [ (ttool[t].Title(), t)
+                  for t in ttool.listContentTypes()
+                  if t not in BAD_TYPES ]
+        items.sort()
+        return SimpleVocabulary.fromItems(items)
+
+ReallyUserFriendlyTypesVocabularyFactory = ReallyUserFriendlyTypesVocabulary()
