@@ -4,6 +4,10 @@ Changelog for plone.app.vocabularies
 
 plone.app.vocabularies - 1.0b4 Unreleased
 
+    - Added new ReallyUserFriendlyTypes and a BAD_TYPES list, which are used
+      to filter out types which are not content types at all.
+      [hannosch]
+
     - Added new AvailableContentLanguages and SupportedContentLanguages
       vocabularies.
       [hannosch]
